--- a/REC-PAD-2021_1 TAE.ipynb
+++ b/REC-PAD-2021_1 TAE.ipynb
@@ -24,7 +24,7 @@
    "id": "2247e271",
    "metadata": {},
    "source": [
-    "### Base com atributos numéricos"
+    "### Base com atributos categóricos numéricos"
    ]
   },
   {
@@ -72,6 +72,14 @@
    "outputs": [],
    "source": [
     "tae.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9b11c3f",
+   "metadata": {},
+   "source": [
+    "## Pré-Processamento Inicial"
    ]
   },
   {
@@ -388,7 +396,7 @@
    "outputs": [],
    "source": [
     "ari_pca = metrics.adjusted_rand_score(y, labels_PCA)\n",
-    "silh_pca = metrics.silhouette_score(X_PCA, labels, metric='euclidean')\n",
+    "silh_pca = metrics.silhouette_score(X_PCA, labels_PCA, metric='euclidean')\n",
     "ami_pca = metrics.adjusted_mutual_info_score(y, labels_PCA)\n",
     "vm_pca = v_measure_score(y, labels_PCA)"
    ]
