--- a/REC-PAD-2021_1 Abalone.ipynb
+++ b/REC-PAD-2021_1 Abalone.ipynb
@@ -24,7 +24,7 @@
    "id": "2247e271",
    "metadata": {},
    "source": [
-    "### Base com atributos numéricos"
+    "### Base com atributos categóricos e numéricos"
    ]
   },
   {
@@ -75,23 +75,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd14088f",
+   "metadata": {},
+   "source": [
+    "## Pré-Processamento Inicial"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "71a2f694",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# abalones = pd.get_dummies(abalones, \n",
-    "#                          columns=[], \n",
-    "#                          prefix=[])\n",
-    "# abalones\n",
-    "\n",
     "atributos_categoricos = [\n",
     "    \"Sex\"\n",
     "    ]\n",
     "\n",
-    "abalones = pd.get_dummies(abalones, \n",
-    "                         columns=atributos_categoricos)\n",
+    "abalones = pd.get_dummies(abalones, columns=atributos_categoricos)\n",
     "abalones"
    ]
   },
@@ -147,10 +149,8 @@
     "\n",
     "# Agora é possivel aplicar o StandardScaler apenas nos atributos\n",
     "\n",
-    "# abalones[atributos] = StandardScaler().fit_transform(abalones[atributos])\n",
-    "# abalones[atributos]\n",
-    "\n",
-    "atributos"
+    "abalones[atributos] = StandardScaler().fit_transform(abalones[atributos])\n",
+    "abalones[atributos]"
    ]
   },
   {
@@ -171,8 +171,6 @@
    "source": [
     "# Selecionando o X e o y\n",
     "\n",
-    "\n",
-    "# X = abalones[atributos]\n",
     "X = abalones.iloc[:, :limiar].values # Atributos do Data Frame do Pandas\n",
     "y = abalones.iloc[:, limiar:].values # Classes do Data Frame do Pandas\n",
     "\n",
@@ -203,18 +201,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics.pairwise import pairwise_distances, cosine_similarity\n",
+    "# from sklearn.metrics.pairwise import pairwise_distances, cosine_similarity\n",
     "\n",
     "\n",
-    "eucl = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'euclidean')\n",
+    "# eucl = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'euclidean')\n",
     "\n",
-    "manh = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'manhattan')\n",
+    "# manh = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'manhattan')\n",
     "\n",
-    "ass_cos = cosine_similarity(X[0].reshape(1, -1), X[1].reshape(1, -1))\n",
+    "# ass_cos = cosine_similarity(X[0].reshape(1, -1), X[1].reshape(1, -1))\n",
     "\n",
-    "print(\"Euclidiano: \", eucl)\n",
-    "print(\"Manhattan: \", manh)\n",
-    "print(\"Assimilaridade do Cosseno: \", ass_cos)"
+    "# print(\"Euclidiano: \", eucl)\n",
+    "# print(\"Manhattan: \", manh)\n",
+    "# print(\"Assimilaridade do Cosseno: \", ass_cos)"
    ]
   },
   {
@@ -339,16 +337,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Comparação: \")\n",
+    "# print(\"Comparação: \")\n",
     "\n",
-    "unique, counts = np.unique(labels, return_counts=True) # KMeans\n",
-    "print(\"KMeans X: \" , dict(zip(unique, counts)))\n",
+    "# unique, counts = np.unique(labels, return_counts=True) # KMeans\n",
+    "# print(\"KMeans X: \" , dict(zip(unique, counts)))\n",
     "\n",
-    "unique, counts = np.unique(labels_PCA, return_counts=True) # KMeans PCA\n",
-    "print(\"KM.. PCA: \", dict(zip(unique, counts)))\n",
+    "# unique, counts = np.unique(labels_PCA, return_counts=True) # KMeans PCA\n",
+    "# print(\"KM.. PCA: \", dict(zip(unique, counts)))\n",
     "\n",
-    "unique, counts = np.unique(y, return_counts=True) # Original\n",
-    "print(\"Original: \", dict(zip(unique, counts)))\n"
+    "# unique, counts = np.unique(y, return_counts=True) # Original\n",
+    "# print(\"Original: \", dict(zip(unique, counts)))\n"
    ]
   },
   {
@@ -399,7 +397,7 @@
    "outputs": [],
    "source": [
     "ari_pca = metrics.adjusted_rand_score(y, labels_PCA)\n",
-    "silh_pca = metrics.silhouette_score(X_reduced, labels, metric='euclidean')\n",
+    "silh_pca = metrics.silhouette_score(X_reduced, labels_PCA, metric='euclidean')\n",
     "ami_pca = metrics.adjusted_mutual_info_score(y, labels_PCA)\n",
     "vm_pca = v_measure_score(y, labels_PCA)"
    ]
@@ -434,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aacb0c39",
+   "id": "9f653e91",
    "metadata": {},
    "outputs": [],
    "source": []
