Commit 6 - Aprendizagem Supervisionada - Inicio

--- a/REC-PAD-2021_1 Cogumelos.ipynb
+++ b/REC-PAD-2021_1 Cogumelos.ipynb
@@ -94,12 +94,6 @@
     "                        \"habitat\"\n",
     "                      ])\n",
     "\n",
-    "# Substituindo a string \n",
-    "# a coluna 11, 'stalk-root' apresenta o missing value = ? \n",
-    "# mushroom = mushroom.replace({\n",
-    "\n",
-    "# })\n",
-    "# mushroom = mushroom.drop(columns=['0', '1'])\n",
     "mushroom"
    ]
   },
@@ -110,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mushroom.describe()"
+    "# mushroom.describe()"
    ]
   },
   {
@@ -120,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mushroom.dtypes"
+    "# mushroom.dtypes"
    ]
   },
   {
@@ -187,8 +181,7 @@
     "                        \"population\", \n",
     "                        \"habitat\"\n",
     "                      ]\n",
-    "mushroom = pd.get_dummies(mushroom, \n",
-    "                         columns=atributos_categoricos)\n",
+    "mushroom = pd.get_dummies(mushroom, columns=atributos_categoricos)\n",
     "mushroom"
    ]
   },
@@ -259,25 +252,16 @@
     "\n",
     "# Agora é possivel aplicar o StandardScaler apenas nos atributos\n",
     "\n",
-    "# mushroom[atributos] = StandardScaler().fit_transform(mushroom[atributos])\n",
-    "# mushroom[atributos]\n",
-    "atributos"
+    "mushroom[atributos] = StandardScaler().fit_transform(mushroom[atributos])\n",
+    "mushroom[atributos]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60958b82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "a432d8e9",
    "metadata": {},
    "source": [
-    "## Clusterizando a base dos Cogumelos\n",
+    "## Aprendizagem supervisionada\n",
     "##### Selecionando o X e y"
    ]
   },
@@ -290,63 +274,24 @@
    "source": [
     "# Selecionando o X e o y\n",
     "\n",
-    "\n",
-    "# X = mushroom[atributos]\n",
-    "X = mushroom.iloc[:, limiar:].values # Atributos do Data Frame do Pandas\n",
-    "y = mushroom.iloc[:, :limiar].values # Classes do Data Frame do Pandas\n",
+    "X = mushroom.iloc[:, limiar:] # Atributos do Data Frame do Pandas\n",
+    "y = mushroom.iloc[:, :limiar] # Classes do Data Frame do Pandas\n",
     "\n",
     "y = np.squeeze(y) # Converter em um unico Array quando usar o dataFrame do Pandas\n",
     "\n",
     "y_unique = np.unique(y)\n",
     "\n",
-    "# Atualizando o eixo Y\n",
+    "mapa_cores = y.copy()\n",
+    "\n",
     "for i in range(len(y_unique)):\n",
-    "    y = [i if y_unique[i] == e else e for e in y]\n",
-    "y = np.array(y)\n",
+    "    mapa_cores = [i if y_unique[i] == e else e for e in mapa_cores]\n",
+    "mapa_cores = np.array(mapa_cores)\n",
     "\n",
     "y_unique # Valores unicos de classes\n",
     "\n",
-    "y_unique_n = np.unique(y) # Original\n",
-    "print(\"Equivalencia: \", dict(zip(y_unique, y_unique_n)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eca6aefd",
-   "metadata": {},
-   "source": [
-    "##### Exemplos de Algoritmos para cálculos de distâncias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4795404",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics.pairwise import pairwise_distances, cosine_similarity\n",
-    "\n",
-    "\n",
-    "eucl = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'euclidean')\n",
-    "\n",
-    "manh = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'manhattan')\n",
-    "\n",
-    "ass_cos = cosine_similarity(X[0].reshape(1, -1), X[1].reshape(1, -1))\n",
-    "\n",
-    "print(\"Euclidiano: \", eucl)\n",
-    "print(\"Manhattan: \", manh)\n",
-    "print(\"Assimilaridade do Cosseno: \", ass_cos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d234a97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pd.DataFrame(pairwise_distances(X, metric='euclidean'))\n"
+    "y_unique_n = np.unique(mapa_cores) # Original\n",
+    "print(\"Equivalencia: \", dict(zip(y_unique, y_unique_n)))\n",
+    "mapa_cores"
    ]
   },
   {
@@ -381,32 +326,8 @@
     "    pyplot.title(title)\n",
     "\n",
     "plt.figure(figsize=(10, 8)) # Tamanho da Figura\n",
-    "plot_g(plt, 'Projeção 2D do Dados em PCA', y, len(y_unique))\n",
+    "plot_g(plt, 'Projeção 2D do Dados em PCA', mapa_cores, len(y_unique))\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8eba0817",
-   "metadata": {},
-   "source": [
-    "##### KMeans com a base original e com o PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d1cd172",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import KMeans\n",
-    "\n",
-    "kmeans = KMeans(n_clusters=len(y_unique)).fit(X)\n",
-    "labels = kmeans.labels_\n",
-    "\n",
-    "kmeans_PCA = KMeans(n_clusters=len(y_unique)).fit(X_reduced)\n",
-    "labels_PCA = kmeans_PCA.labels_\n"
    ]
   },
   {
@@ -427,63 +348,36 @@
    "outputs": [],
    "source": [
     "\n",
-    "plt.figure(figsize=(10*2, 7))\n",
+    "# plt.figure(figsize=(10*2, 7))\n",
     "\n",
-    "plt.subplot(1, 2, 1) # row 1, col 2 index 1\n",
-    "plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels, \n",
-    "            edgecolor='none', alpha=0.7, s=40,\n",
-    "            cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
-    "plt.colorbar()\n",
-    "plt.title('Projeção KMeans com X Original')\n",
+    "# plt.subplot(1, 2, 1) # row 1, col 2 index 1\n",
+    "# plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels, \n",
+    "#             edgecolor='none', alpha=0.7, s=40,\n",
+    "#             cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
+    "# plt.colorbar()\n",
+    "# plt.title('Projeção KMeans com X Original')\n",
     "\n",
-    "plt.subplot(1, 2, 2) # row 1, col 2 index 1\n",
-    "plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels_PCA, \n",
-    "            edgecolor='none', alpha=0.7, s=40,\n",
-    "            cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
-    "plt.colorbar()\n",
-    "plt.title('Projeção KMeans com X PCA')\n",
+    "# plt.subplot(1, 2, 2) # row 1, col 2 index 1\n",
+    "# plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels_PCA, \n",
+    "#             edgecolor='none', alpha=0.7, s=40,\n",
+    "#             cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
+    "# plt.colorbar()\n",
+    "# plt.title('Projeção KMeans com X PCA')\n",
     "\n",
-    "plt.show()"
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adf62954",
+   "id": "66f0474a",
    "metadata": {},
    "source": [
-    "##### Comparando o KMeans, KMeans PCA e o y Original"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c51cfd31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Comparação: \")\n",
-    "\n",
-    "unique, counts = np.unique(labels, return_counts=True) # KMeans\n",
-    "print(\"KMeans X: \" , dict(zip(unique, counts)))\n",
-    "\n",
-    "unique, counts = np.unique(labels_PCA, return_counts=True) # KMeans PCA\n",
-    "print(\"KM.. PCA: \", dict(zip(unique, counts)))\n",
-    "\n",
-    "unique, counts = np.unique(y, return_counts=True) # Original\n",
-    "print(\"Original: \", dict(zip(unique, counts)))\n"
+    "# Utilização do k-NN"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "174c23d1",
-   "metadata": {},
-   "source": [
-    "##### Usando as metricas de avaliação para comparar os resultados com e sem o PCA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9408d1f",
+   "id": "4166be29",
    "metadata": {},
    "source": [
     "##### Sem PCA"
@@ -492,74 +386,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d67ac4a",
+   "id": "eff94c39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import metrics\n",
-    "from sklearn.metrics.cluster import v_measure_score\n",
+    "dataset = mushroom\n",
     "\n",
-    "ari = metrics.adjusted_rand_score(y, labels)\n",
-    "silh = metrics.silhouette_score(X, labels, metric='euclidean')\n",
-    "ami = metrics.adjusted_mutual_info_score(y, labels)\n",
-    "vm = v_measure_score(y, labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8933b68",
-   "metadata": {},
-   "source": [
-    "##### Com PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cca833fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ari_pca = metrics.adjusted_rand_score(y, labels_PCA)\n",
-    "silh_pca = metrics.silhouette_score(X_reduced, labels_PCA, metric='euclidean')\n",
-    "ami_pca = metrics.adjusted_mutual_info_score(y, labels_PCA)\n",
-    "vm_pca = v_measure_score(y, labels_PCA)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a186ac47",
-   "metadata": {},
-   "source": [
-    "##### Tabela de comparação dos resultados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b36e500b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = {\n",
-    "# \"Base de dados\": [], \n",
-    "\"Pré-processamento\":['Com PCA', 'Sem PCA'], \n",
-    "\"SILHUETA\":[silh_pca, silh], \n",
-    "\"ARI\": [ari_pca, ari], \n",
-    "\"AMI\": [ami_pca, ami], \n",
-    "\"V-M\":[vm_pca, vm]\n",
-    "}\n",
+    "i_sort = np.random.randint(len(X) - 1) # Selecionando aleatóriamente um index de teste\n",
     "\n",
-    "pd.DataFrame(data)"
+    "X_teste = X.iloc[i_sort] \n",
+    "X = X.drop(i_sort)\n",
+    "\n",
+    "y_teste = y.iloc[i_sort]\n",
+    "y = y.drop(i_sort)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e95109b",
+   "id": "60f82481",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "\n",
+    "knn.fit(X, y)\n",
+    "\n",
+    "predict = knn.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "050490e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist, vizinhos = knn.kneighbors(np.array(X_teste).reshape(1,-1))\n",
+    "classes = []\n",
+    "for v in vizinhos:\n",
+    "    classes.append(dataset.iloc[:-1, limiar][v])\n",
+    "classes"
+   ]
   }
  ],
  "metadata": {
