--- a/REC-PAD-2021_1 Abalone.ipynb
+++ b/REC-PAD-2021_1 Abalone.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abalones.describe()"
+    "#abalones.describe()"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abalones.dtypes"
+    "#abalones.dtypes"
    ]
   },
   {
@@ -94,33 +94,7 @@
     "    ]\n",
     "\n",
     "abalones = pd.get_dummies(abalones, columns=atributos_categoricos)\n",
-    "abalones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ebad927",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# from sklearn.preprocessing import OrdinalEncoder\n",
-    "# atributos = [\n",
-    "#                             \"Sex\",\n",
-    "#                             \"Length\",\n",
-    "#                             \"Diameter\",\n",
-    "#                             \"Height\",\n",
-    "#                             \"Whole weight\",\n",
-    "#                             \"Shucked weight\",\n",
-    "#                             \"Viscera weight\",\n",
-    "#                             \"Shell weight\"\n",
-    "#                       ]\n",
-    "# enc = OrdinalEncoder()\n",
-    "# enc.fit(abalones[atributos])\n",
-    "# abalones[atributos] = enc.transform(abalones[atributos])\n",
-    "# abalones"
+    "#abalones"
    ]
   },
   {
@@ -158,7 +132,7 @@
    "id": "a432d8e9",
    "metadata": {},
    "source": [
-    "## Clusterizando a base dos Abalones\n",
+    "## Aprendizagem Supervisionada\n",
     "##### Selecionando o X e y"
    ]
   },
@@ -171,8 +145,8 @@
    "source": [
     "# Selecionando o X e o y\n",
     "\n",
-    "X = abalones.iloc[:, :limiar].values # Atributos do Data Frame do Pandas\n",
-    "y = abalones.iloc[:, limiar:].values # Classes do Data Frame do Pandas\n",
+    "X = abalones.iloc[:, :limiar] # Atributos do Data Frame do Pandas\n",
+    "y = abalones.iloc[:, limiar:] # Classes do Data Frame do Pandas\n",
     "\n",
     "y = np.squeeze(y) # Converter em um unico Array quando usar o dataFrame do Pandas\n",
     "\n",
@@ -184,45 +158,6 @@
     "# y = np.array(y)\n",
     "\n",
     "y_unique # Valores unicos de classes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eca6aefd",
-   "metadata": {},
-   "source": [
-    "##### Exemplos de Algoritmos para cálculos de distâncias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4795404",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.metrics.pairwise import pairwise_distances, cosine_similarity\n",
-    "\n",
-    "\n",
-    "# eucl = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'euclidean')\n",
-    "\n",
-    "# manh = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'manhattan')\n",
-    "\n",
-    "# ass_cos = cosine_similarity(X[0].reshape(1, -1), X[1].reshape(1, -1))\n",
-    "\n",
-    "# print(\"Euclidiano: \", eucl)\n",
-    "# print(\"Manhattan: \", manh)\n",
-    "# print(\"Assimilaridade do Cosseno: \", ass_cos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d234a97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pd.DataFrame(pairwise_distances(X, metric='euclidean'))\n"
    ]
   },
   {
@@ -263,30 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eba0817",
-   "metadata": {},
-   "source": [
-    "##### KMeans com a base original e com o PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d1cd172",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import KMeans\n",
-    "\n",
-    "kmeans = KMeans(n_clusters=len(y_unique)).fit(X)\n",
-    "labels = kmeans.labels_\n",
-    "\n",
-    "kmeans_PCA = KMeans(n_clusters=len(y_unique)).fit(X_reduced)\n",
-    "labels_PCA = kmeans_PCA.labels_\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ee61099d",
    "metadata": {},
    "source": [
@@ -303,63 +214,36 @@
    "outputs": [],
    "source": [
     "\n",
-    "plt.figure(figsize=(10*2, 7))\n",
+    "# plt.figure(figsize=(10*2, 7))\n",
     "\n",
-    "plt.subplot(1, 2, 1) # row 1, col 2 index 1\n",
-    "plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels, \n",
-    "            edgecolor='none', alpha=0.7, s=40,\n",
-    "            cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
-    "plt.colorbar()\n",
-    "plt.title('Projeção KMeans com X Original')\n",
+    "# plt.subplot(1, 2, 1) # row 1, col 2 index 1\n",
+    "# plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels, \n",
+    "#             edgecolor='none', alpha=0.7, s=40,\n",
+    "#             cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
+    "# plt.colorbar()\n",
+    "# plt.title('Projeção KMeans com X Original')\n",
     "\n",
-    "plt.subplot(1, 2, 2) # row 1, col 2 index 1\n",
-    "plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels_PCA, \n",
-    "            edgecolor='none', alpha=0.7, s=40,\n",
-    "            cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
-    "plt.colorbar()\n",
-    "plt.title('Projeção KMeans com X PCA')\n",
+    "# plt.subplot(1, 2, 2) # row 1, col 2 index 1\n",
+    "# plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels_PCA, \n",
+    "#             edgecolor='none', alpha=0.7, s=40,\n",
+    "#             cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
+    "# plt.colorbar()\n",
+    "# plt.title('Projeção KMeans com X PCA')\n",
     "\n",
-    "plt.show()"
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adf62954",
+   "id": "66f0474a",
    "metadata": {},
    "source": [
-    "##### Comparando o KMeans, KMeans PCA e o y Original"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c51cfd31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(\"Comparação: \")\n",
-    "\n",
-    "# unique, counts = np.unique(labels, return_counts=True) # KMeans\n",
-    "# print(\"KMeans X: \" , dict(zip(unique, counts)))\n",
-    "\n",
-    "# unique, counts = np.unique(labels_PCA, return_counts=True) # KMeans PCA\n",
-    "# print(\"KM.. PCA: \", dict(zip(unique, counts)))\n",
-    "\n",
-    "# unique, counts = np.unique(y, return_counts=True) # Original\n",
-    "# print(\"Original: \", dict(zip(unique, counts)))\n"
+    "# Utilização do k-NN"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "174c23d1",
-   "metadata": {},
-   "source": [
-    "##### Usando as metricas de avaliação para comparar os resultados com e sem o PCA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9408d1f",
+   "id": "4166be29",
    "metadata": {},
    "source": [
     "##### Sem PCA"
@@ -368,74 +252,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d67ac4a",
+   "id": "eff94c39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import metrics\n",
-    "from sklearn.metrics.cluster import v_measure_score\n",
+    "dataset = abalones\n",
     "\n",
-    "ari = metrics.adjusted_rand_score(y, labels)\n",
-    "silh = metrics.silhouette_score(X, labels, metric='euclidean')\n",
-    "ami = metrics.adjusted_mutual_info_score(y, labels)\n",
-    "vm = v_measure_score(y, labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8933b68",
-   "metadata": {},
-   "source": [
-    "##### Com PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cca833fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ari_pca = metrics.adjusted_rand_score(y, labels_PCA)\n",
-    "silh_pca = metrics.silhouette_score(X_reduced, labels_PCA, metric='euclidean')\n",
-    "ami_pca = metrics.adjusted_mutual_info_score(y, labels_PCA)\n",
-    "vm_pca = v_measure_score(y, labels_PCA)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a186ac47",
-   "metadata": {},
-   "source": [
-    "##### Tabela de comparação dos resultados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b36e500b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = {\n",
-    "# \"Base de dados\": [], \n",
-    "\"Pré-processamento\":['Com PCA', 'Sem PCA'], \n",
-    "\"SILHUETA\":[silh_pca, silh], \n",
-    "\"ARI\": [ari_pca, ari], \n",
-    "\"AMI\": [ami_pca, ami], \n",
-    "\"V-M\":[vm_pca, vm]\n",
-    "}\n",
+    "i_sort = np.random.randint(len(X) - 1) # Selecionando aleatóriamente um index de teste\n",
     "\n",
-    "pd.DataFrame(data)"
+    "X_teste = X.iloc[i_sort] \n",
+    "X = X.drop(i_sort)\n",
+    "\n",
+    "y_teste = y.iloc[i_sort]\n",
+    "y = y.drop(i_sort)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f653e91",
+   "id": "60f82481",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "\n",
+    "knn.fit(X, y)\n",
+    "\n",
+    "predict = knn.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "050490e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist, vizinhos = knn.kneighbors(np.array(X_teste).reshape(1,-1))\n",
+    "classes = []\n",
+    "for v in vizinhos:\n",
+    "    classes.append(dataset.iloc[:-1, limiar][v])\n",
+    "classes"
+   ]
   }
  ],
  "metadata": {
