--- a/REC-PAD-2021_1 Balance.ipynb
+++ b/REC-PAD-2021_1 Balance.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "balance.describe()"
+    "# balance.describe()"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "balance.dtypes"
+    "# balance.dtypes"
    ]
   },
   {
@@ -76,40 +76,6 @@
    "metadata": {},
    "source": [
     "## Pré-Processamento Inicial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71a2f694",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sem necessidade pois os atributos da base são numéricos\n",
-    "\n",
-    "# balance = pd.get_dummies(balance, \n",
-    "#                          columns=[], \n",
-    "#                          prefix=[])\n",
-    "# balance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ebad927",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sem necessidade pois os atributos da base são apenas numericos\n",
-    "\n",
-    "# from sklearn.preprocessing import OrdinalEncoder\n",
-    "# atributos = [\n",
-    "#                          \"Peso_E\", \"Distância_E\", \"Peso_D\", \"Distância_D\"\n",
-    "#                       ]\n",
-    "# enc = OrdinalEncoder()\n",
-    "# enc.fit(balance[atributos])\n",
-    "# balance[atributos] = enc.transform(balance[atributos])\n",
-    "# balance"
    ]
   },
   {
@@ -126,6 +92,8 @@
     "balance[atributos] = StandardScaler().fit_transform(balance[atributos])\n",
     "#balance = pd.DataFrame(balance)\n",
     "\n",
+    "limiar = 1\n",
+    "\n",
     "balance\n"
    ]
   },
@@ -134,7 +102,7 @@
    "id": "a432d8e9",
    "metadata": {},
    "source": [
-    "## Clusterizando a Balança\n",
+    "## Aprendizagem supervisionada\n",
     "##### Selecionando o X e y"
    ]
   },
@@ -149,48 +117,20 @@
     "\n",
     "\n",
     "# X = jogo_da_velha[atributos]\n",
-    "X = balance.iloc[:, 1:].values # Atributos do Data Frame do Pandas\n",
-    "y = balance.iloc[:, :1].values # Classes do Data Frame do Pandas\n",
+    "X = balance.iloc[:, limiar:] # Atributos do Data Frame do Pandas\n",
+    "y = balance.iloc[:, :limiar] # Classes do Data Frame do Pandas\n",
     "\n",
     "y = np.squeeze(y) # Converter em um unico Array quando usar o dataFrame do Pandas\n",
     "\n",
     "y_unique = np.unique(y)\n",
     "\n",
-    "# Atualizando o eixo Y\n",
-    "for i in range(len(y_unique)):\n",
-    "    y = [i if y_unique[i] == e else e for e in y]\n",
-    "y = np.array(y)\n",
+    "from sklearn.preprocessing import OrdinalEncoder # Criando um mapa de cores para mapear o gráfico\n",
+    "\n",
+    "enc = OrdinalEncoder()\n",
+    "enc.fit([y])\n",
+    "mapa_cores = enc.transform([y])\n",
     "\n",
     "y_unique # Valores unicos de classes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eca6aefd",
-   "metadata": {},
-   "source": [
-    "##### Exemplos de Algoritmos para cálculos de distâncias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4795404",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.metrics.pairwise import pairwise_distances, cosine_similarity\n",
-    "\n",
-    "\n",
-    "# eucl = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'euclidean')\n",
-    "\n",
-    "# manh = pairwise_distances(X[0].reshape(1, -1), X[1].reshape(1, -1), 'manhattan')\n",
-    "\n",
-    "# ass_cos = cosine_similarity(X[0].reshape(1, -1), X[1].reshape(1, -1))\n",
-    "\n",
-    "# print(\"Euclidiano: \", eucl)\n",
-    "# print(\"Manhattan: \", manh)\n",
-    "# print(\"Assimilaridade do Cosseno: \", ass_cos)"
    ]
   },
   {
@@ -225,32 +165,8 @@
     "    pyplot.title(title)\n",
     "\n",
     "plt.figure(figsize=(10, 8)) # Tamanho da Figura\n",
-    "plot_g(plt, 'Projeção 2D do Dados em PCA', y, len(y_unique))\n",
+    "plot_g(plt, 'Projeção 2D do Dados em PCA', mapa_cores, len(y_unique))\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8eba0817",
-   "metadata": {},
-   "source": [
-    "##### KMeans com a base original e com o PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d1cd172",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import KMeans\n",
-    "\n",
-    "kmeans = KMeans(n_clusters=len(y_unique)).fit(X)\n",
-    "labels = kmeans.labels_\n",
-    "\n",
-    "kmeans_PCA = KMeans(n_clusters=len(y_unique)).fit(X_reduced)\n",
-    "labels_PCA = kmeans_PCA.labels_\n"
    ]
   },
   {
@@ -265,67 +181,42 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e39ef0cb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "\n",
-    "plt.figure(figsize=(10*2, 7))\n",
+    "# plt.figure(figsize=(10*2, 7))\n",
     "\n",
-    "plt.subplot(1, 2, 1) # row 1, col 2 index 1\n",
-    "plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels, \n",
-    "            edgecolor='none', alpha=0.7, s=40,\n",
-    "            cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
-    "plt.colorbar()\n",
-    "plt.title('Projeção KMeans com X Original')\n",
+    "# plt.subplot(1, 2, 1) # row 1, col 2 index 1\n",
+    "# plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels, \n",
+    "#             edgecolor='none', alpha=0.7, s=40,\n",
+    "#             cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
+    "# plt.colorbar()\n",
+    "# plt.title('Projeção KMeans com X Original')\n",
     "\n",
-    "plt.subplot(1, 2, 2) # row 1, col 2 index 1\n",
-    "plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels_PCA, \n",
-    "            edgecolor='none', alpha=0.7, s=40,\n",
-    "            cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
-    "plt.colorbar()\n",
-    "plt.title('Projeção KMeans com X PCA')\n",
+    "# plt.subplot(1, 2, 2) # row 1, col 2 index 1\n",
+    "# plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=labels_PCA, \n",
+    "#             edgecolor='none', alpha=0.7, s=40,\n",
+    "#             cmap=plt.cm.get_cmap('nipy_spectral', len(y_unique)))\n",
+    "# plt.colorbar()\n",
+    "# plt.title('Projeção KMeans com X PCA')\n",
     "\n",
-    "plt.show()"
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adf62954",
+   "id": "66f0474a",
    "metadata": {},
    "source": [
-    "##### Comparando o KMeans, KMeans PCA e o y Original"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c51cfd31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Comparação: \")\n",
-    "\n",
-    "unique, counts = np.unique(labels, return_counts=True) # KMeans\n",
-    "print(\"KMeans X: \" , dict(zip(unique, counts)))\n",
-    "\n",
-    "unique, counts = np.unique(labels_PCA, return_counts=True) # KMeans PCA\n",
-    "print(\"KM.. PCA: \", dict(zip(unique, counts)))\n",
-    "\n",
-    "unique, counts = np.unique(y, return_counts=True) # Original\n",
-    "print(\"Original: \", dict(zip(unique, counts)))\n"
+    "# Utilização do k-NN"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "174c23d1",
-   "metadata": {},
-   "source": [
-    "##### Usando as metricas de avaliação para comparar os resultados com e sem o PCA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8702f8b",
+   "id": "4166be29",
    "metadata": {},
    "source": [
     "##### Sem PCA"
@@ -334,74 +225,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d67ac4a",
+   "id": "eff94c39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import metrics\n",
-    "from sklearn.metrics.cluster import v_measure_score\n",
+    "dataset = balance\n",
     "\n",
-    "ari = metrics.adjusted_rand_score(y, labels)\n",
-    "silh = metrics.silhouette_score(X, labels, metric='euclidean')\n",
-    "ami = metrics.adjusted_mutual_info_score(y, labels)\n",
-    "vm = v_measure_score(y, labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8933b68",
-   "metadata": {},
-   "source": [
-    "##### Com PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cca833fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ari_pca = metrics.adjusted_rand_score(y, labels_PCA)\n",
-    "silh_pca = metrics.silhouette_score(X_reduced, labels_PCA, metric='euclidean')\n",
-    "ami_pca = metrics.adjusted_mutual_info_score(y, labels_PCA)\n",
-    "vm_pca = v_measure_score(y, labels_PCA)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a186ac47",
-   "metadata": {},
-   "source": [
-    "##### Tabela de comparação dos resultados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b36e500b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = {\n",
-    "# \"Base de dados\": [], \n",
-    "\"Pré-processamento\":['Com PCA', 'Sem PCA'], \n",
-    "\"SILHUETA\":[silh_pca, silh], \n",
-    "\"ARI\": [ari_pca, ari], \n",
-    "\"AMI\": [ami_pca, ami], \n",
-    "\"V-M\":[vm_pca, vm]\n",
-    "}\n",
+    "i_sort = np.random.randint(len(X) - 1) # Selecionando aleatóriamente um index de teste\n",
     "\n",
-    "print(pd.DataFrame(data))"
+    "X_teste = X.iloc[i_sort] \n",
+    "X = X.drop(i_sort)\n",
+    "\n",
+    "y_teste = y.iloc[i_sort]\n",
+    "y = y.drop(i_sort)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "013eadc2",
+   "id": "60f82481",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "\n",
+    "knn.fit(X, y)\n",
+    "\n",
+    "predict = knn.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "050490e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist, vizinhos = knn.kneighbors(np.array(X_teste).reshape(1,-1))\n",
+    "classes = []\n",
+    "for v in vizinhos:\n",
+    "    classes.append(dataset.iloc[:-1, limiar][v])\n",
+    "classes"
+   ]
   }
  ],
  "metadata": {
