Commit 8 - Finalizando parte do pré-processamento

--- a/REC-PAD-2021_1 Acute Inflammations.ipynb
+++ b/REC-PAD-2021_1 Acute Inflammations.ipynb
@@ -24,7 +24,7 @@
    "id": "2247e271",
    "metadata": {},
    "source": [
-    "### Base com atributos categóricos"
+    "### Base com atributos boleandos porem categóricos"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "source": [
     "# Base tirada de https://archive.ics.uci.edu/ml/datasets/Acute+Inflammations\n",
     "\n",
-    "# Esta base apresenta 2 colunas de classes, necessário observação extra\n",
+    "# Esta base apresenta 2 colunas de classes, necessário observação extra, para isso vamos transformar em uma coluna\n",
     "\n",
     "diagnosis = pd.read_csv('databases/diagnosis.csv',\n",
     "                      header=None, \n",
@@ -83,46 +83,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3fdaee78",
+   "metadata": {},
+   "source": [
+    "##### Antes é necessário tratar as duas classes como uma só"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c2ca342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Para transformar as duas colunas de classes em uma só, é feita uma comparação de condição\n",
+    "\n",
+    "# A classse nova será da seguinte forma\n",
+    "\n",
+    "significado_da_classe = {\n",
+    "    0 : \"Nenhum dos dois (Inflammation of urinary bladder | Nephritis of renal pelvis origin)\",\n",
+    "    1 : \"Apenas (Inflammation of urinary bladder)\",\n",
+    "    2 : \"Apenas (Nephritis of renal pelvis origin)\",\n",
+    "    3 : \"Ambos (Inflammation of urinary bladder | Nephritis of renal pelvis origin)\", \n",
+    "}\n",
+    "\n",
+    "def comparar_e_transformar(row):\n",
+    "    d_1 = len(row) - 2\n",
+    "    d_2 = len(row) - 1\n",
+    "    if row[d_1] == \"no\" == row[d_2]:\n",
+    "        return 0\n",
+    "    if row[d_1] == \"yes\" != row[d_2]:\n",
+    "        return 1\n",
+    "    if row[d_1] == \"no\" != row[d_2]:\n",
+    "        return 2\n",
+    "    if row[d_1] == \"yes\" == row[d_2]:\n",
+    "        return 3 \n",
+    "\n",
+    "_temp = diagnosis.apply(comparar_e_transformar, axis=1)\n",
+    "\n",
+    "# Deletando as duas ultimas colunas de classes para adicionar a nova\n",
+    "\n",
+    "for i in range(2):\n",
+    "    name = diagnosis.columns[-1]\n",
+    "    del diagnosis[name]\n",
+    "\n",
+    "diagnosis[\"Class\"] = _temp\n",
+    "diagnosis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd5e0a95",
+   "metadata": {},
+   "source": [
+    "##### Converter os atributos boleanos em numeros"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "71a2f694",
    "metadata": {},
    "outputs": [],
    "source": [
-    "atributos_categoricos = [\n",
-    "   \"nausea?\",\n",
+    "# converter os atributos boleanos em numeros com o OrdinalEncoder\n",
+    "\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "atributos = [\n",
+    "    \"nausea?\",\n",
     "    \"Lumbar pain?\",\n",
     "    \"Urine pushing?\", \n",
     "    \"Micturition pains?\", \n",
-    "    \"Burning of urethra, itch, swelling of urethra outlet?\", \n",
+    "    \"Burning of urethra, itch, swelling of urethra outlet?\"\n",
     "    ]\n",
     "\n",
-    "diagnosis = pd.get_dummies(diagnosis, \n",
-    "                         columns=atributos_categoricos)\n",
+    "enc = OrdinalEncoder()\n",
+    "enc.fit(diagnosis[atributos])\n",
+    "diagnosis[atributos] = enc.transform(diagnosis[atributos])\n",
+    "\n",
     "diagnosis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ebad927",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# from sklearn.preprocessing import OrdinalEncoder\n",
-    "# atributos = [\n",
-    "#    \"nausea?\",\n",
-    "#     \"Lumbar pain?\",\n",
-    "#     \"Urine pushing?\", \n",
-    "#     \"Micturition pains?\", \n",
-    "#     \"Burning of urethra, itch, swelling of urethra outlet?\", \n",
-    "#                       ]\n",
-    "# enc = OrdinalEncoder()\n",
-    "# enc.fit(diagnosis[atributos])\n",
-    "# diagnosis[atributos] = enc.transform(diagnosis[atributos])\n",
-    "# diagnosis"
    ]
   },
   {
@@ -134,40 +174,17 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# diagnosis[atributos] = StandardScaler().fit_transform(diagnosis[atributos])\n",
-    "# #diagnosis = pd.DataFrame(diagnosis)\n",
-    "\n",
-    "# diagnosis\n",
-    "\n",
     "\n",
     "atributos = diagnosis.columns.values.tolist()\n",
-    "# if not reordered:\n",
-    "#     for i in range(2):\n",
-    "#         e = atributos.pop(0)\n",
-    "#         atributos.append(e)\n",
-    "#     atributos\n",
     "\n",
-    "# reordered = True\n",
-    "# jogo_da_velha = jogo_da_velha.reindex(columns=atributos)\n",
-    "# jogo_da_velha\n",
-    "\n",
-    "\n",
-    "limiar = 1 # O limiar separa o index do que é atributo para o que é a classe\n",
-    "atributos = diagnosis.columns[limiar:] # seleciono apenas os atributos\n",
+    "limiar = 6 # O limiar separa o index do que é atributo para o que é a classe\n",
+    "atributos = diagnosis.columns[:limiar] # seleciono apenas os atributos\n",
     "\n",
     "# Agora é possivel aplicar o StandardScaler apenas nos atributos\n",
     "\n",
     "diagnosis[atributos] = StandardScaler().fit_transform(diagnosis[atributos])\n",
     "diagnosis[atributos]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f07f5f4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -189,19 +206,14 @@
     "\n",
     "\n",
     "# X = jogo_da_velha[atributos]\n",
-    "X = diagnosis.iloc[:, limiar:] # Atributos do Data Frame do Pandas\n",
-    "y = diagnosis.iloc[:, :limiar] # Classes do Data Frame do Pandas\n",
+    "X = diagnosis.iloc[:, :limiar] # Atributos do Data Frame do Pandas\n",
+    "y = diagnosis.iloc[:, limiar:] # Classes do Data Frame do Pandas\n",
     "\n",
     "y = np.squeeze(y) # Converter em um unico Array quando usar o dataFrame do Pandas\n",
     "\n",
     "y_unique = np.unique(y)\n",
     "\n",
     "mapa_cores = y.copy()\n",
-    "\n",
-    "# Atualizando o eixo Y\n",
-    "for i in range(len(y_unique)):\n",
-    "    mapa_cores = [i if y_unique[i] == e else e for e in mapa_cores]\n",
-    "mapa_cores = np.array(mapa_cores)\n",
     "\n",
     "y_unique # Valores unicos de classes"
    ]
@@ -344,6 +356,14 @@
     "    classes.append(dataset.iloc[:-1, limiar][v])\n",
     "classes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "389a9861",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
