--- a/REC-PAD-2021_1 Balance.ipynb
+++ b/REC-PAD-2021_1 Balance.ipynb
@@ -124,11 +124,11 @@
     "\n",
     "y_unique = np.unique(y)\n",
     "\n",
-    "from sklearn.preprocessing import OrdinalEncoder # Criando um mapa de cores para mapear o gráfico\n",
+    "from sklearn.preprocessing import LabelEncoder # Criando um mapa de cores para mapear o gráfico\n",
     "\n",
-    "enc = OrdinalEncoder()\n",
-    "enc.fit([y])\n",
-    "mapa_cores = enc.transform([y])\n",
+    "lb = LabelEncoder()\n",
+    "lb.fit(y)\n",
+    "mapa_cores = lb.transform(y)\n",
     "\n",
     "y_unique # Valores unicos de classes"
    ]
