--- a/REC-PAD-2021_1 Ecoli.ipynb
+++ b/REC-PAD-2021_1 Ecoli.ipynb
@@ -87,6 +87,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfc3f947",
+   "metadata": {},
+   "source": [
+    "##### Deletando a coluna 'Sequence Name'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1115bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A coluna em questão é uma coluna de ID de busca, logo não é necessária para o que será feito no trabalho\n",
+    "if ecoli.get(\"Sequence Name\") is not None:\n",
+    "    del ecoli[\"Sequence Name\"]\n",
+    "\n",
+    "ecoli.dtypes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8479d6cb",
@@ -108,9 +130,9 @@
     "ecoli[atributos] = StandardScaler().fit_transform(ecoli[atributos])\n",
     "#ecoli = pd.DataFrame(balance)\n",
     "\n",
-    "limiar = 8\n",
+    "limiar = 7\n",
     "\n",
-    "ecoli\n"
+    "ecoli"
    ]
   },
   {
@@ -140,13 +162,13 @@
     "\n",
     "y_unique = np.unique(y)\n",
     "\n",
-    "from sklearn.preprocessing import OrdinalEncoder # Criando um mapa de cores para mapear o gráfico\n",
+    "from sklearn.preprocessing import LabelEncoder # Criando um mapa de cores para mapear o gráfico\n",
     "\n",
-    "enc = OrdinalEncoder()\n",
-    "enc.fit([y])\n",
-    "mapa_cores = enc.transform([y])\n",
-    "\n",
-    "y_unique # Valores unicos de classes"
+    "lb = LabelEncoder()\n",
+    "lb.fit(y)\n",
+    "mapa_cores = lb.transform(y)\n",
+    "mapa_cores\n",
+    "# y_unique # Valores unicos de classes"
    ]
   },
   {
@@ -287,6 +309,14 @@
     "    classes.append(dataset.iloc[:-1, limiar][v])\n",
     "classes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72cc1121",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
