--- a/REC-PAD-2021_1 Folha.ipynb
+++ b/REC-PAD-2021_1 Folha.ipynb
@@ -94,6 +94,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77e7b862",
+   "metadata": {},
+   "source": [
+    "##### Removendo uma das colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3efa1607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removendo a coluna \"Specimen Number\" porque ela é um identificador \"unico\", logo não é necessária\n",
+    "if leaf.get(\"Specimen Number\") is not None:\n",
+    "    del leaf[\"Specimen Number\"]\n",
+    "\n",
+    "leaf.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "792de954",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8479d6cb",
@@ -103,7 +133,6 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "atributos = [           \n",
-    "                        \"Specimen Number\",\n",
     "                        \"Eccentricity\",\n",
     "                        \"Aspect Ratio\",\n",
     "                        \"Elongation\",\n",
@@ -154,11 +183,7 @@
     "\n",
     "y_unique = np.unique(y)\n",
     "\n",
-    "from sklearn.preprocessing import OrdinalEncoder # Criando um mapa de cores para mapear o gráfico\n",
-    "\n",
-    "enc = OrdinalEncoder()\n",
-    "enc.fit([y])\n",
-    "mapa_cores = enc.transform([y])\n",
+    "mapa_cores = y.copy() # Criando um mapa de cores para mapear o gráfico\n",
     "\n",
     "y_unique # Valores unicos de classes"
    ]
@@ -259,7 +284,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = leaf = np.random.randint(len(X) - 1) # Selecionando aleatóriamente um index de teste\n",
+    "dataset = leaf \n",
+    "\n",
+    "i_sort = np.random.randint(len(X) - 1) # Selecionando aleatóriamente um index de teste\n",
     "\n",
     "X_teste = X.iloc[i_sort] \n",
     "X = X.drop(i_sort)\n",
