--- a/REC-PAD-2021_1 Jogo da Velha.ipynb
+++ b/REC-PAD-2021_1 Jogo da Velha.ipynb
@@ -207,12 +207,11 @@
     "\n",
     "y_unique = np.unique(y)\n",
     "\n",
-    "mapa_cores = y.copy()\n",
+    "from sklearn.preprocessing import LabelEncoder # Criando um mapa de cores para mapear o gráfico\n",
     "\n",
-    "# Atualizando o eixo Y\n",
-    "for i in range(len(y_unique)):\n",
-    "    mapa_cores = [i if y_unique[i] == e else e for e in mapa_cores]\n",
-    "mapa_cores = np.array(mapa_cores)\n",
+    "lb = LabelEncoder()\n",
+    "lb.fit(y)\n",
+    "mapa_cores = lb.transform(y)\n",
     "\n",
     "y_unique # Valores unicos de classes"
    ]
@@ -355,6 +354,14 @@
     "    classes.append(dataset.iloc[:-1, limiar][v])\n",
     "classes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8f4efa1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
