--- a/REC-PAD-2021_1 Sementes.ipynb
+++ b/REC-PAD-2021_1 Sementes.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Base tirada de https://archive.ics.uci.edu/ml/datasets/leaf\n",
+    "# Base tirada de https://archive.ics.uci.edu/ml/datasets/seeds\n",
     "\n",
     "seeds = pd.read_csv('databases/seeds_dataset.csv',\n",
     "                      header=None, \n",
@@ -47,7 +47,6 @@
     "                        \"asymmetry coefficient\",\n",
     "                        \"length of kernel groove.\",\n",
     "                        \"Class (Species)\"\n",
-    "                        \n",
     "                      ])\n",
     "\n",
     "\n",
@@ -107,7 +106,7 @@
     "\n",
     "seeds[atributos] = StandardScaler().fit_transform(seeds[atributos])\n",
     "\n",
-    "limiar = 6\n",
+    "limiar = 7\n",
     "\n",
     "seeds\n"
    ]
@@ -139,11 +138,7 @@
     "\n",
     "y_unique = np.unique(y)\n",
     "\n",
-    "from sklearn.preprocessing import OrdinalEncoder # Criando um mapa de cores para mapear o gráfico\n",
-    "\n",
-    "enc = OrdinalEncoder()\n",
-    "enc.fit([y])\n",
-    "mapa_cores = enc.transform([y])\n",
+    "mapa_cores = y.copy() # Criando um mapa de cores para mapear o gráfico\n",
     "\n",
     "y_unique # Valores unicos de classes"
    ]
@@ -286,6 +281,14 @@
     "    classes.append(dataset.iloc[:-1, limiar][v])\n",
     "classes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "202b1d1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
