--- a/REC-PAD-2021_1 Haberman's Survival.ipynb
+++ b/REC-PAD-2021_1 Haberman's Survival.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "# })\n",
     "\n",
-    "ecoli"
+    "haberman"
    ]
   },
   {
@@ -91,13 +91,9 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "atributos = [           \n",
-    "    \"mcg\",\n",
-    "    \"gvh\",\n",
-    "    \"lip\",\n",
-    "    \"chg\",\n",
-    "    \"aac\",\n",
-    "    \"alm1\",\n",
-    "    \"alm2\",\n",
+    "        \"Age of patient at time of operation\",\n",
+    "        \"Patient's year of operation\",\n",
+    "        \"Number of positive axillary nodes detected\",\n",
     "    ]\n",
     "\n",
     "haberman[atributos] = StandardScaler().fit_transform(haberman[atributos])\n",
@@ -135,11 +131,7 @@
     "\n",
     "y_unique = np.unique(y)\n",
     "\n",
-    "from sklearn.preprocessing import OrdinalEncoder # Criando um mapa de cores para mapear o gráfico\n",
-    "\n",
-    "enc = OrdinalEncoder()\n",
-    "enc.fit([y])\n",
-    "mapa_cores = enc.transform([y])\n",
+    "mapa_cores = y.copy() # Criando um mapa de cores para mapear o gráfico\n",
     "\n",
     "y_unique # Valores unicos de classes"
    ]
