Commit 9 - Adicionado Naive Bayes e SVM

--- a/REC-PAD-2021_1 Balance.ipynb
+++ b/REC-PAD-2021_1 Balance.ipynb
@@ -271,6 +271,152 @@
     "    classes.append(dataset.iloc[:-1, limiar][v])\n",
     "classes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae6bad24",
+   "metadata": {},
+   "source": [
+    "# Utilização do Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80df16e1",
+   "metadata": {},
+   "source": [
+    "##### Sem PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c777dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "gnb = GaussianNB()\n",
+    "gnb.fit(X, y)\n",
+    "predict = gnb.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e826c9d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "# mnb = MultinomialNB()\n",
+    "# mnb.fit(X, y)\n",
+    "# predict = mnb.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "# print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "384440a3",
+   "metadata": {},
+   "source": [
+    "# Utilização do SVM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75662375",
+   "metadata": {},
+   "source": [
+    "##### RBF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc0e9f9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svc = SVC(kernel='rbf')\n",
+    "svc.fit(X, y)\n",
+    "predict = svc.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01759831",
+   "metadata": {},
+   "source": [
+    "##### Linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c799f78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc = SVC(kernel='linear')\n",
+    "svc.fit(X, y)\n",
+    "predict = svc.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53192d0c",
+   "metadata": {},
+   "source": [
+    "##### Polinomial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dadb925b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc = SVC(kernel='poly')\n",
+    "svc.fit(X, y)\n",
+    "predict = svc.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e5a20eb",
+   "metadata": {},
+   "source": [
+    "##### Sigmoid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8261582d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc = SVC(kernel='sigmoid')\n",
+    "svc.fit(X, y)\n",
+    "predict = svc.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
   }
  ],
  "metadata": {
