Commit 10 - Redes Neurais e Arvores de decisão

--- a/REC-PAD-2021_1 Haberman's Survival.ipynb
+++ b/REC-PAD-2021_1 Haberman's Survival.ipynb
@@ -420,6 +420,147 @@
     "\n",
     "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bd8e524",
+   "metadata": {},
+   "source": [
+    "# Arvores de decisão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25fc14ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "arvore = DecisionTreeClassifier(criterion=\"entropy\")\n",
+    "arvore.fit(X, y)\n",
+    "predict = arvore.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57708a2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.tree import export_text\n",
+    "# tree_rules = export_text(arvore, feature_names=list(X.columns))\n",
+    "# print(tree_rules)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4e7b707",
+   "metadata": {},
+   "source": [
+    "# Redes Neurais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f0aba99",
+   "metadata": {},
+   "source": [
+    "##### Identity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c81033",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "mlp = MLPClassifier(activation=\"identity\")\n",
+    "mlp.fit(X, y)\n",
+    "predict = mlp.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd0da2af",
+   "metadata": {},
+   "source": [
+    "##### Sigmoide | Logistica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3783a6ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "mlp = MLPClassifier(activation=\"logistic\")\n",
+    "mlp.fit(X, y)\n",
+    "predict = mlp.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "282ad94b",
+   "metadata": {},
+   "source": [
+    "##### Tangente Hiperbólica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba41e342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "mlp = MLPClassifier(activation=\"tanh\")\n",
+    "mlp.fit(X, y)\n",
+    "predict = mlp.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0cb3d6a",
+   "metadata": {},
+   "source": [
+    "##### ReLU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "facb7559",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "mlp = MLPClassifier(activation=\"relu\")\n",
+    "mlp.fit(X, y)\n",
+    "predict = mlp.predict(np.array(X_teste).reshape(1,-1))\n",
+    "\n",
+    "print({\"Previsto:\": predict, \"Correto:\": y_teste})"
+   ]
   }
  ],
  "metadata": {
